--- a/breathing_room/gallery/index.html
+++ b/breathing_room/gallery/index.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>갤러리 | 루웨인 숨틔움방</title>
-<link rel="stylesheet" href="../common.css">
-<script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
-<script type="module" src="/scripts/memory_policies.js" defer></script>
-
-<link rel="manifest" href="/manifest.json">
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('ServiceWorker registered:', reg))
-      .catch(err => console.warn('ServiceWorker registration failed:', err));
-  });
-}
-</script>
-
+  <meta charset="UTF-8">
+  <title>숨틔움 갤러리</title>
+  <link rel="stylesheet" href="../common.css">
+  <style>
+    .gallery-wrap {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 1.5rem;
+    }
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 1rem;
+    }
+    .gallery-item {
+      cursor: pointer;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 6px rgba(0,0,0,.15);
+      background: #fff;
+    }
+    .gallery-item img {
+      width: 100%;
+      display: block;
+    }
+    .gallery-item-title {
+      padding: 0.5rem 0.75rem;
+      font-size: 0.9rem;
+    }
+    .viewer-backdrop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.7);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .viewer-inner {
+      max-width: 90vw;
+      max-height: 90vh;
+    }
+    .viewer-inner img {
+      max-width: 100%;
+      max-height: 100%;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-<header>
-  <h1>🖼️ 갤러리</h1>
-  <p>루웨인과 사용자의 시각적 울림 공간</p>
-  <button class="collab-btn" onclick="location.href='/assets/personas/persna_lab.html'">
-    🤝 퍼스나와 협업하기
-  </button>
-</header>
+  <div class="gallery-wrap">
+    <h1>숨틔움 갤러리</h1>
+    <p>루웨인 OS / images / gallery 에 있는 그림들을 보여주는 공간.</p>
 
-<main>
-  <section>
-    <p>루웨인 갤러리, 사용자 갤러리로 구분되어 있습니다.  
-    이미지를 통해 당신의 감응을 표현하세요.</p>
-  </section>
-</main>
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+    <div id="galleryStatus">불러오는 중…</div>
+    <div id="galleryGrid" class="gallery-grid"></div>
+  </div>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+  <!-- 전체 화면 보기 -->
+  <div id="viewer" class="viewer-backdrop">
+    <div class="viewer-inner">
+      <img id="viewerImg" src="" alt="">
+    </div>
+  </div>
+
+  <!-- Supabase + 공통 초기화 -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="/includes/script_reverb.js"></script>
+  <script src="/includes/br_gallery.js"></script>
 </body>
 </html>
