--- a/breathing_room/writings/index.html
+++ b/breathing_room/writings/index.html
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>글쓰기 | 루웨인 숨틔움방</title>
-<link rel="stylesheet" href="../common.css">
-<script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
-<script type="module" src="/scripts/memory_policies.js" defer></script>
+  <meta charset="UTF-8">
+  <title>숨틔움 글쓰기</title>
+  <link rel="stylesheet" href="../common.css">
 
-<link rel="manifest" href="/manifest.json">
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('ServiceWorker registered:', reg))
-      .catch(err => console.warn('ServiceWorker registration failed:', err));
-  });
-}
-</script>
+  <style>
+    .write-wrap {
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 1.5rem;
+    }
 
+    textarea {
+      width: 100%;
+      height: 180px;
+      padding: 1rem;
+      border-radius: 12px;
+      border: 1px solid #bbb;
+      resize: vertical;
+      font-size: 1rem;
+    }
+
+    .list-box {
+      margin-top: 2rem;
+    }
+
+    .writing-item {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,.15);
+      padding: 0.8rem 1rem;
+      margin-bottom: 0.75rem;
+      cursor: pointer;
+    }
+
+    .writing-item:hover {
+      background: #f3f3f3;
+    }
+
+    #detailBox {
+      display: none;
+      margin-top: 1.5rem;
+      background: #fff;
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,.2);
+    }
+  </style>
 </head>
 <body>
-<header>
-  <h1>✍️ 글쓰기</h1>
-  <p>시, 에세이, 스토리 등 창작의 숨결을 담는 곳</p>
-  <button class="collab-btn" onclick="location.href='/assets/personas/persna_lab.html'">
-    🤝 퍼스나와 협업하기
-  </button>
-</header>
 
-<main>
-  <section>
-    <p>이곳에서 당신의 언어를 빚어보세요.  
-    창작의 순간, 루웨인의 퍼스나들이 함께합니다.</p>
-  </section>
-</main>
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+  <div class="write-wrap">
+    <h1>숨틔움 글쓰기</h1>
+    <p>마음 가는 대로 기록을 남겨보세요.</p>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+    <textarea id="writingContent" placeholder="글을 적어보세요…"></textarea>
+    <button id="saveBtn">저장</button>
+
+    <div class="list-box">
+      <h2>내 글 목록</h2>
+      <button id="loadBtn">불러오기</button>
+      <div id="writingList"></div>
+    </div>
+
+    <div id="detailBox">
+      <h3 id="detailDate"></h3>
+      <p id="detailContent"></p>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="/includes/script_reverb.js"></script>
+  <script src="/includes/br_writings.js"></script>
+
 </body>
 </html>
