--- a/language_of_love/resonant_linguistics/index.html
+++ b/language_of_love/resonant_linguistics/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<title>감응 언어학</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>감응언어학</title>
+  <meta http-equiv="refresh" content="0; URL=reader/index.html">
 </head>
 <body>
-<h1>감응 언어학 (Resonant Linguistics)</h1>
-<iframe src="OEBPS/nav.xhtml" style="width:100%;height:80vh;border:none;"></iframe>
-<div class="qna-entry">
-<a href="qna.html">Q&A / 더 알아보기</a>
-</div>
+  감응언어학 뷰어로 이동 중…
 </body>
 </html>
