--- a/language_of_love/resonant_linguistics/reader/index.html
+++ b/language_of_love/resonant_linguistics/reader/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>감응언어학 Reader</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      display: flex;
-      height: 100vh;
-      overflow: hidden;
-    }
-    #sidebar {
-      width: 240px;
-      border-right: 1px solid #ccc;
-      padding: 1rem;
-      overflow-y: auto;
-    }
-    #viewer {
-      flex: 1;
-      padding: 1rem;
-      overflow-y: auto;
-    }
-    .chapter-link {
-      padding: 0.3rem 0;
-      cursor: pointer;
-    }
-    .chapter-link:hover {
-      text-decoration: underline;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>감응 언어학 Reader</title>
+<link rel="stylesheet" href="qna.css">
+<style>
+  body {
+    margin:0; padding:0;
+    display:flex;
+    height:100vh;
+    overflow:hidden;
+    font-family:sans-serif;
+  }
+  #sidebar {
+    width:240px;
+    border-right:1px solid #ccc;
+    overflow-y:auto;
+    padding:1rem;
+  }
+  #viewer {
+    flex:1;
+    overflow-y:auto;
+    padding:1rem;
+  }
+  /* PC Q&A 패널 */
+  #qnaPanel {
+    width:320px;
+    border-left:1px solid #ccc;
+    padding:1rem;
+    overflow-y:auto;
+  }
+  /* 모바일 숨김 */
+  @media(max-width:900px){
+    #qnaPanel { display:none; }
+    #mobileQnaBtn { display:block; }
+  }
+  #mobileQnaBtn {
+    display:none;
+    position:fixed;
+    bottom:20px; right:20px;
+    padding:0.8rem 1.2rem;
+    border-radius:12px;
+    border:none; background:#333;
+    color:#fff; font-size:14px;
+  }
+</style>
 </head>
 <body>
 
@@ -38,12 +53,20 @@
     <div id="toc"></div>
   </div>
 
-  <div id="viewer">
-    <h2>감응언어학 로딩 중…</h2>
+  <div id="viewer">로딩 중…</div>
+
+  <div id="qnaPanel">
+    <h3>Q&A</h3>
+    <textarea id="qInput" placeholder="질문 입력…" style="width:100%;height:90px;"></textarea>
+    <button id="qSubmit">질문 등록</button>
+
+    <h4 style="margin-top:1rem;">내 질문</h4>
+    <div id="qList"></div>
   </div>
 
-  <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
-  <script src="reader.js"></script>
+  <button id="mobileQnaBtn" onclick="location.href='qna-mobile.html'">Q&A</button>
 
+<script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
+<script src="reader.js"></script>
 </body>
 </html>
