--- a/goods/persna/index.html
+++ b/goods/persna/index.html
@@ -13,12 +13,12 @@
 
     <section>
         <h2>사물함 (Locker)</h2>
-        <div id="locker-entries"></div>
+        <div id="locker-entries" class="box"></div>
     </section>
 
     <section>
         <h2>활동 로그 (Activity Log)</h2>
-        <div id="activity-log"></div>
+        <div id="activity-log" class="box"></div>
     </section>
 
     <section>
