--- a/breathing_room/cards/index.html
+++ b/breathing_room/cards/index.html
@@ -1,53 +1,116 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>숨틔움 카드</title>
-  <link rel="stylesheet" href="../common.css">
-  <style>
-    .cards-wrap {
-      max-width: 720px;
-      margin: 0 auto;
-      padding: 1.5rem;
-      text-align: center;
-    }
-    .card-box {
-      margin: 2rem auto;
-      max-width: 360px;
-      border-radius: 16px;
-      overflow: hidden;
-      background: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,.2);
-      cursor: pointer;
-      transition: transform .15s ease;
-    }
-    .card-box:hover { transform: scale(1.02); }
-
-    .card-box img {
-      width: 100%;
-      display: block;
-    }
-
-    #cardStatus {
-      color: #888;
-      margin-top: 0.5rem;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <title>이미지 카드 만들기</title>
+    <link rel="stylesheet" href="../assets/css/common.css" />
 </head>
+
 <body>
-  <div class="cards-wrap">
-    <h1>숨틔움 카드</h1>
-    <p>이미지를 한 장 뽑아 오늘의 메시지를 보여줍니다.<br>(클릭하면 랜덤 다시 뽑기)</p>
 
-    <div id="cardStatus">불러오는 중…</div>
+<h1>이미지 카드 생성</h1>
 
-    <div id="cardBox" class="card-box" style="display:none;">
-      <img id="cardImg" src="" alt="">
-    </div>
-  </div>
+<!-- 대화 영역 -->
+<div id="chat_box" class="chat-box"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="/includes/script_reverb.js"></script>
-  <script src="/includes/br_cards.js"></script>
+<div class="input-row">
+    <input type="text" id="user_input" placeholder="메시지를 입력하세요…" />
+    <button id="send_btn">보내기</button>
+</div>
+
+<hr/>
+
+<!-- 이미지 생성 버튼 -->
+<button id="gen_btn">이미지 생성하기</button>
+
+<!-- 생성된 이미지 영역 -->
+<div id="image_preview" class="image-preview"></div>
+
+<hr/>
+
+<!-- 저장 버튼 -->
+<button id="save_btn">카드로 저장하기</button>
+
+<div id="status"></div>
+
+<script type="module">
+import { fileToBase64, saveMyItem } from "../assets/js/core.js";
+
+// --- 대화창 추가 함수 ---
+function addMessage(sender, message) {
+    const box = document.getElementById("chat_box");
+    const div = document.createElement("div");
+    div.className = sender === "user" ? "msg-user" : "msg-ai";
+    div.innerText = message;
+    box.appendChild(div);
+    box.scrollTop = box.scrollHeight;
+}
+
+// --- 사용자 입력 처리 ---
+document.getElementById("send_btn").addEventListener("click", () => {
+    const input = document.getElementById("user_input").value;
+    if (!input) return;
+
+    addMessage("user", input);
+
+    // 퍼스나 반응 (여기엔 네가 원하는 퍼스나 API 붙이면 됨)
+    addMessage("ai", "…퍼스나가 응답 중…");
+
+    document.getElementById("user_input").value = "";
+});
+
+// --- 이미지 생성 ---
+let generatedBase64 = null;
+
+document.getElementById("gen_btn").addEventListener("click", async () => {
+    addMessage("ai", "이미지를 생성하는 중…");
+
+    // ★ 여기 이미지 생성 API 붙이면 됨
+    // 지금은 더미 URL 사용 → 나중에 진짜 생성 API 연결
+
+    const dummyImage = "../assets/shared_images/sample.png";  // 예시
+
+    // 브라우저에서 Base64 변환
+    const res = await fetch(dummyImage);
+    const blob = await res.blob();
+
+    const base64 = await new Promise((resolve) => {
+        const reader = new FileReader();
+        reader.onloadend = () => resolve(reader.result.split(",")[1]);
+        reader.readAsDataURL(blob);
+    });
+
+    generatedBase64 = base64;
+
+    document.getElementById("image_preview").innerHTML =
+        `<img src="data:image/png;base64,${generatedBase64}" />`;
+});
+
+// --- 저장 기능 ---
+document.getElementById("save_btn").addEventListener("click", async () => {
+    if (!generatedBase64) {
+        document.getElementById("status").innerText = "이미지를 먼저 생성하세요.";
+        return;
+    }
+
+    try {
+        await saveMyItem({
+            owner_id: "USER_ID",  // 나중에 연결
+            owner_type: "user",
+            type: "card",
+            title: "이미지 카드",
+            description: "대화 기반 생성 카드",
+            content_base64: generatedBase64,
+            extra: {}
+        });
+
+        document.getElementById("status").innerText = "저장 완료!";
+    }
+    catch (err) {
+        document.getElementById("status").innerText = "오류: " + err.message;
+    }
+});
+</script>
+
 </body>
 </html>
