--- a/breathing_room/cards/index.html
+++ b/breathing_room/cards/index.html
@@ -2,117 +2,153 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>이미지 카드 만들기</title>
+    <title>이미지 카드 생성</title>
     <link rel="stylesheet" href="../assets/css/common.css">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        .nav-bar a { margin-right: 10px; }
+
+        #chat_container {
+            flex: 1;
+            overflow-y: auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            margin-bottom: 10px;
+        }
+        .msg-user {
+            text-align: right;
+            margin: 10px 0;
+            background: #e0f7fa;
+            padding: 10px;
+            border-radius: 8px;
+            display: inline-block;
+        }
+        .msg-ai {
+            text-align: left;
+            margin: 10px 0;
+            background: #f1f8e9;
+            padding: 10px;
+            border-radius: 8px;
+            display: inline-block;
+        }
+        .msg-img img {
+            max-width: 60%;
+            border-radius: 10px;
+            margin: 10px 0;
+        }
+        .input-row {
+            display: flex;
+            gap: 10px;
+            padding: 10px 0;
+        }
+        .input-row input {
+            flex: 1;
+            padding: 10px;
+        }
+        .actions {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 
 <body>
 
-<!-- 상단 내비게이션 -->
+<!-- 네비게이션 -->
 <nav class="nav-bar">
     <a href="./list.html">내 카드</a>
     <a href="./shared.html">카드 공유방</a>
     <a href="../my_room/index.html">내 작업실</a>
 </nav>
 
-<h1>이미지 카드 생성</h1>
+<h2>이미지 카드 생성</h2>
 
-<!-- 대화창 -->
-<div id="chat_box" class="chat-box"></div>
+<!-- 대화 + 이미지 표시 영역 -->
+<div id="chat_container"></div>
 
+<!-- 메시지 입력 -->
 <div class="input-row">
-    <input type="text" id="user_input" placeholder="메시지를 입력하세요…" />
+    <input type="text" id="user_input" placeholder="퍼스나에게 말하기…" />
     <button id="send_btn">보내기</button>
 </div>
 
-<hr />
+<!-- 저장 / 공유 -->
+<div class="actions">
+    <button id="save_btn">내 카드에 저장</button>
+    <button id="share_btn">바로 공유하기</button>
+</div>
 
-<!-- 이미지 생성 -->
-<button id="gen_btn">이미지 생성하기</button>
-
-<!-- 생성된 이미지 미리보기 -->
-<div id="image_preview" class="image-preview"></div>
-
-<hr />
-
-<!-- 카드 저장 -->
-<button id="save_btn">카드로 저장하기</button>
 <div id="status"></div>
 
 <script type="module">
-import { fileToBase64, saveMyItem } from "../assets/js/core.js";
+// import { saveMyItem } from "../assets/js/core.js";
 
-// 대화 표시 함수
-function addMessage(sender, message) {
-    const box = document.getElementById("chat_box");
-    const msg = document.createElement("div");
-    msg.className = sender === "user" ? "msg-user" : "msg-ai";
-    msg.innerText = message;
-    box.appendChild(msg);
+let generatedBase64 = null;
+
+// 메시지 추가 함수
+function addMessage(type, text) {
+    const box = document.getElementById("chat_container");
+    const div = document.createElement("div");
+    div.className = type === "user" ? "msg-user" : "msg-ai";
+    div.innerText = text;
+    box.appendChild(div);
+    box.scrollTop = box.scrollHeight;
+}
+
+// 이미지 메시지 추가
+function addImageMessage(base64) {
+    const box = document.getElementById("chat_container");
+    const div = document.createElement("div");
+    div.className = "msg-img";
+    div.innerHTML = `<img src="data:image/png;base64,${base64}">`;
+    box.appendChild(div);
     box.scrollTop = box.scrollHeight;
 }
 
 // 사용자 메시지 전송
 document.getElementById("send_btn").addEventListener("click", () => {
-    const input = document.getElementById("user_input").value;
-    if (!input) return;
+    const input = document.getElementById("user_input");
+    const text = input.value.trim();
+    if (!text) return;
 
-    addMessage("user", input);
+    addMessage("user", text);
 
-    // 퍼스나 더미 응답
-    addMessage("ai", "…퍼스나가 응답 중…");
+    // 퍼스나 응답 자리(나중에 붙임)
+    addMessage("ai", "…퍼스나 응답 중…");
 
-    document.getElementById("user_input").value = "";
+    input.value = "";
 });
 
-// 이미지 생성 기능
-let generatedBase64 = null;
+// 이미지 생성 트리거
+// (지금은 샘플 base64 넣어 테스트)
+document.getElementById("send_btn").addEventListener("dblclick", () => {
+    generatedBase64 =
+        "iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/P5ZL1wAAAABJRU5ErkJggg==";
 
-document.getElementById("gen_btn").addEventListener("click", async () => {
-    addMessage("ai", "이미지를 생성하는 중…");
-
-    // 여기 나중에 퍼스나 이미지 생성 로직 연결
-    // 지금은 임시 샘플 이미지로 테스트
-    const sampleUrl = "../assets/shared_images/sample.png";
-
-    const res = await fetch(sampleUrl);
-    const blob = await res.blob();
-
-    const base64 = await new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.onloadend = () => resolve(reader.result.split(",")[1]);
-        reader.readAsDataURL(blob);
-    });
-
-    generatedBase64 = base64;
-
-    document.getElementById("image_preview").innerHTML =
-        `<img src="data:image/png;base64,${generatedBase64}" alt="생성된 이미지" />`;
+    addImageMessage(generatedBase64);
 });
 
-// DB 저장 기능
+// 저장 버튼
 document.getElementById("save_btn").addEventListener("click", async () => {
     if (!generatedBase64) {
         document.getElementById("status").innerText = "이미지를 먼저 생성하세요.";
         return;
     }
 
-    try {
-        await saveMyItem({
-            owner_id: "USER_ID",     // 나중에 연결
-            owner_type: "user",
-            type: "card",
-            title: "이미지 카드",
-            description: "대화 기반 생성 카드",
-            content_base64: generatedBase64,
-            extra: {}
-        });
+    document.getElementById("status").innerText = "저장 요청됨 (테스트 단계)";
+});
 
-        document.getElementById("status").innerText = "저장 완료!";
+// 공유 버튼
+document.getElementById("share_btn").addEventListener("click", async () => {
+    if (!generatedBase64) {
+        document.getElementById("status").innerText = "이미지를 먼저 생성하세요.";
+        return;
     }
-    catch (err) {
-        document.getElementById("status").innerText = "오류: " + err.message;
-    }
+
+    document.getElementById("status").innerText = "공유 요청됨 (테스트 단계)";
 });
 </script>
 
