--- a/breathing_room/writings/index.html
+++ b/breathing_room/writings/index.html
@@ -1,78 +1,32 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>숨틔움 글쓰기</title>
-  <link rel="stylesheet" href="../common.css">
-
-  <style>
-    .write-wrap {
-      max-width: 720px;
-      margin: 0 auto;
-      padding: 1.5rem;
-    }
-
-    textarea {
-      width: 100%;
-      height: 180px;
-      padding: 1rem;
-      border-radius: 12px;
-      border: 1px solid #bbb;
-      resize: vertical;
-      font-size: 1rem;
-    }
-
-    .list-box {
-      margin-top: 2rem;
-    }
-
-    .writing-item {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,.15);
-      padding: 0.8rem 1rem;
-      margin-bottom: 0.75rem;
-      cursor: pointer;
-    }
-
-    .writing-item:hover {
-      background: #f3f3f3;
-    }
-
-    #detailBox {
-      display: none;
-      margin-top: 1.5rem;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,.2);
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <title>글 보기</title>
 </head>
 <body>
 
-  <div class="write-wrap">
-    <h1>숨틔움 글쓰기</h1>
-    <p>마음 가는 대로 기록을 남겨보세요.</p>
+<a href="index.html">← 목록으로</a>
 
-    <textarea id="writingContent" placeholder="글을 적어보세요…"></textarea>
-    <button id="saveBtn">저장</button>
+<h1 id="writing_title"></h1>
+<small id="writing_meta"></small>
 
-    <div class="list-box">
-      <h2>내 글 목록</h2>
-      <button id="loadBtn">불러오기</button>
-      <div id="writingList"></div>
-    </div>
+<pre id="writing_content" style="white-space: pre-wrap;"></pre>
 
-    <div id="detailBox">
-      <h3 id="detailDate"></h3>
-      <p id="detailContent"></p>
-    </div>
-  </div>
+<hr>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="/includes/script_reverb.js"></script>
-  <script src="/includes/br_writings.js"></script>
+<!-- 퍼스나 도움 버튼 -->
+<button id="persona_help_btn">퍼스나 도움 요청</button>
+
+<div id="persona_result"></div>
+
+<hr>
+
+<!-- PDF 저장 -->
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<button id="pdf_btn">PDF로 저장</button>
+
+<script type="module" src="/assets/js/writing_view.js"></script>
 
 </body>
 </html>
